[gd_scene load_steps=15 format=3 uid="uid://vqvs470xc1lw"]

[ext_resource type="Script" uid="uid://bmn0vseig0kxr" path="res://scripts/game_board.gd" id="1_hljw5"]
[ext_resource type="PackedScene" uid="uid://bgn763vrxmmcu" path="res://scenes/tile.tscn" id="1_nd4as"]
[ext_resource type="PackedScene" uid="uid://b2wm4ux7jjth6" path="res://scenes/piece/Rook.tscn" id="2_3ng4l"]
[ext_resource type="PackedScene" uid="uid://c54qlxs7mr3qm" path="res://scenes/piece/Pawn.tscn" id="3_otxgx"]
[ext_resource type="PackedScene" uid="uid://b4axunshn8kgc" path="res://scenes/piece/Bishop.tscn" id="4_hq5ls"]
[ext_resource type="PackedScene" uid="uid://d2oersqf5cg6a" path="res://scenes/piece/Knight.tscn" id="5_vewne"]
[ext_resource type="PackedScene" uid="uid://bpx8asa0jn4b1" path="res://scenes/piece/Queen.tscn" id="6_6pldg"]
[ext_resource type="PackedScene" uid="uid://d2jy7efa8dtxo" path="res://scenes/piece/King.tscn" id="6_grdf5"]
[ext_resource type="Script" uid="uid://bk6erub2o2qnt" path="res://scripts/menu/board_screen_controller.gd" id="9_338j4"]
[ext_resource type="PackedScene" uid="uid://bmtcaraovyhdt" path="res://scenes/menu/GamemodeSelectionScreen.tscn" id="9_gc1oq"]
[ext_resource type="PackedScene" uid="uid://111w7dffrqkh" path="res://scenes/menu/TileModifierScreen.tscn" id="9_wxh2q"]
[ext_resource type="PackedScene" uid="uid://b2b5f3ejhqp35" path="res://scenes/menu/GameOverlay.tscn" id="10_w8n1y"]

[sub_resource type="BoxMesh" id="BoxMesh_hljw5"]
size = Vector3(9, 0.2, 9)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wxh2q"]

[node name="Board" type="Node3D"]
script = ExtResource("1_hljw5")

[node name="BoardBase" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = SubResource("BoxMesh_hljw5")
surface_material_override/0 = SubResource("StandardMaterial3D_wxh2q")

[node name="Tile_R1C1" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.000168562)
visible = false

[node name="Rook_P2" parent="Tile_R1C1" groups=["Player_Two"] instance=ExtResource("2_3ng4l")]
player = 1

[node name="Tile_R2C1" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
visible = false

[node name="Pawn_P2" parent="Tile_R2C1" groups=["Player_Two"] instance=ExtResource("3_otxgx")]
player = 1

[node name="Tile_R3C1" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
visible = false

[node name="Tile_R4C1" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
visible = false

[node name="Tile_R5C1" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)
visible = false

[node name="Tile_R6C1" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
visible = false

[node name="Tile_R7C1" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)
visible = false

[node name="Pawn_P1" parent="Tile_R7C1" groups=["Player_One"] instance=ExtResource("3_otxgx")]
player = 0

[node name="Tile_R8C1" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7)
visible = false

[node name="Rook_P1" parent="Tile_R8C1" groups=["Player_One"] instance=ExtResource("2_3ng4l")]
player = 0

[node name="Tile_R1C2" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
visible = false

[node name="Knight_P2" parent="Tile_R1C2" instance=ExtResource("5_vewne")]
player = 1

[node name="Tile_R2C2" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)
visible = false

[node name="Pawn_P2" parent="Tile_R2C2" groups=["Player_Two"] instance=ExtResource("3_otxgx")]
visible = false
player = 1

[node name="Tile_R3C2" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 2)
visible = false

[node name="Tile_R4C2" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 3)
visible = false

[node name="Tile_R5C2" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 4)
visible = false

[node name="Tile_R6C2" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 5)
visible = false

[node name="Tile_R7C2" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 6)
visible = false

[node name="Pawn_P1" parent="Tile_R7C2" groups=["Player_One"] instance=ExtResource("3_otxgx")]
player = 0

[node name="Tile_R8C2" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 7)
visible = false

[node name="Knight_P1" parent="Tile_R8C2" groups=["Player_One"] instance=ExtResource("5_vewne")]
player = 0

[node name="Tile_R1C3" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
visible = false

[node name="Bishop_P2" parent="Tile_R1C3" groups=["Player_Two"] instance=ExtResource("4_hq5ls")]
player = 1

[node name="Tile_R2C3" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 1)
visible = false

[node name="Pawn_P2" parent="Tile_R2C3" groups=["Player_Two"] instance=ExtResource("3_otxgx")]
player = 1

[node name="Tile_R3C3" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)
visible = false

[node name="Tile_R4C3" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 3)
visible = false

[node name="Tile_R5C3" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 4)
visible = false

[node name="Tile_R6C3" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 5)
visible = false

[node name="Tile_R7C3" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 6)
visible = false

[node name="Pawn_P1" parent="Tile_R7C3" groups=["Player_One"] instance=ExtResource("3_otxgx")]
player = 0

[node name="Tile_R8C3" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 7)
visible = false

[node name="Bishop_P1" parent="Tile_R8C3" groups=["Player_One"] instance=ExtResource("4_hq5ls")]
player = 0

[node name="Tile_R1C4" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
visible = false

[node name="Queen_P2" parent="Tile_R1C4" groups=["Player_Two"] instance=ExtResource("6_6pldg")]
player = 1

[node name="Tile_R2C4" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 1)
visible = false

[node name="Pawn_P2" parent="Tile_R2C4" groups=["Player_Two"] instance=ExtResource("3_otxgx")]
player = 1

[node name="Tile_R3C4" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 2)
visible = false

[node name="Tile_R4C4" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3)
visible = false

[node name="Tile_R5C4" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 4)
visible = false

[node name="Tile_R6C4" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 5)
visible = false

[node name="Tile_R7C4" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 6)
visible = false

[node name="Pawn_P1" parent="Tile_R7C4" groups=["Player_One"] instance=ExtResource("3_otxgx")]
player = 0

[node name="Tile_R8C4" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 7)
visible = false

[node name="Queen_P1" parent="Tile_R8C4" groups=["Player_One"] instance=ExtResource("6_6pldg")]
player = 0

[node name="Tile_R1C5" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)
visible = false

[node name="King_P2" parent="Tile_R1C5" groups=["Player_Two"] instance=ExtResource("6_grdf5")]
player = 1

[node name="Tile_R2C5" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 1)
visible = false

[node name="Pawn_P2" parent="Tile_R2C5" groups=["Player_Two"] instance=ExtResource("3_otxgx")]
player = 1

[node name="Tile_R3C5" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 2)
visible = false

[node name="Tile_R4C5" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 3)
visible = false

[node name="Tile_R5C5" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4)
visible = false

[node name="Tile_R6C5" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, -4.76837e-07, 5)
visible = false

[node name="Tile_R7C5" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 6)
visible = false

[node name="Pawn_P1" parent="Tile_R7C5" groups=["Player_One"] instance=ExtResource("3_otxgx")]
player = 0

[node name="Tile_R8C5" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 7)
visible = false

[node name="King_P1" parent="Tile_R8C5" groups=["Player_One"] instance=ExtResource("6_grdf5")]
player = 0

[node name="Tile_R1C6" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)
visible = false

[node name="Bishop_P2" parent="Tile_R1C6" groups=["Player_Two"] instance=ExtResource("4_hq5ls")]
player = 1

[node name="Tile_R2C6" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 1)
visible = false

[node name="Pawn_P2" parent="Tile_R2C6" groups=["Player_Two"] instance=ExtResource("3_otxgx")]
player = 1

[node name="Tile_R3C6" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 2)
visible = false

[node name="Tile_R4C6" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 3)
visible = false

[node name="Tile_R5C6" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 4)
visible = false

[node name="Tile_R6C6" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5)
visible = false

[node name="Tile_R7C6" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 6)
visible = false

[node name="Pawn_P1" parent="Tile_R7C6" groups=["Player_One"] instance=ExtResource("3_otxgx")]
player = 0

[node name="Tile_R8C6" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 7)
visible = false

[node name="Bishop_P1" parent="Tile_R8C6" groups=["Player_One"] instance=ExtResource("4_hq5ls")]
player = 0

[node name="Tile_R1C7" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)
visible = false

[node name="Knight_P2" parent="Tile_R1C7" instance=ExtResource("5_vewne")]
player = 1

[node name="Tile_R2C7" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 1)
visible = false

[node name="Pawn_P2" parent="Tile_R2C7" groups=["Player_Two"] instance=ExtResource("3_otxgx")]
player = 1

[node name="Tile_R3C7" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 2)
visible = false

[node name="Tile_R4C7" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 3)
visible = false

[node name="Tile_R5C7" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 4)
visible = false

[node name="Tile_R6C7" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 5)
visible = false

[node name="Tile_R7C7" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 6)
visible = false

[node name="Pawn_P1" parent="Tile_R7C7" groups=["Player_One"] instance=ExtResource("3_otxgx")]
player = 0

[node name="Tile_R8C7" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 7)
visible = false

[node name="Knight_P1" parent="Tile_R8C7" groups=["Player_One"] instance=ExtResource("5_vewne")]
player = 0

[node name="Tile_R1C8" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0)
visible = false

[node name="Rook_P2" parent="Tile_R1C8" groups=["Player_Two"] instance=ExtResource("2_3ng4l")]
player = 1

[node name="Tile_R2C8" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 1)
visible = false

[node name="Pawn_P2" parent="Tile_R2C8" groups=["Player_Two"] instance=ExtResource("3_otxgx")]
player = 1

[node name="Tile_R3C8" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 2)
visible = false

[node name="Tile_R4C8" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 3)
visible = false

[node name="Tile_R5C8" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 4)

[node name="Tile_R6C8" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 5)
visible = false

[node name="Tile_R7C8" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 6)
visible = false

[node name="Pawn_P1" parent="Tile_R7C8" groups=["Player_One"] instance=ExtResource("3_otxgx")]
player = 0

[node name="Tile_R8C8" parent="." instance=ExtResource("1_nd4as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 7)
visible = false

[node name="Rook_P1" parent="Tile_R8C8" groups=["Player_One"] instance=ExtResource("2_3ng4l")]
player = 0

[node name="Captured" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="TileModifierScreenCanvasLayer" type="CanvasLayer" parent="."]

[node name="ScreenController" type="Control" parent="TileModifierScreenCanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("9_338j4")

[node name="GamemodeSelection" parent="TileModifierScreenCanvasLayer/ScreenController" instance=ExtResource("9_gc1oq")]
layout_mode = 1

[node name="TileModifierScreen" parent="TileModifierScreenCanvasLayer/ScreenController" instance=ExtResource("9_wxh2q")]
layout_mode = 1
offset_left = 1162.0
offset_right = 1162.0

[node name="GameOverlay" parent="TileModifierScreenCanvasLayer/ScreenController" instance=ExtResource("10_w8n1y")]
layout_mode = 1
offset_left = 2324.0
offset_right = 2324.0

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="FEN_notation_verified" from="TileModifierScreenCanvasLayer/ScreenController/GamemodeSelection" to="." method="_on_gamemode_selection_fen_notation_verified"]
[connection signal="back_button_pressed" from="TileModifierScreenCanvasLayer/ScreenController/GamemodeSelection" to="TileModifierScreenCanvasLayer/ScreenController" method="_on_gamemode_selection_back_button_pressed"]
[connection signal="column_number_changed" from="TileModifierScreenCanvasLayer/ScreenController/GamemodeSelection" to="." method="_on_gamemode_selection_column_number_changed"]
[connection signal="continue_button_pressed" from="TileModifierScreenCanvasLayer/ScreenController/GamemodeSelection" to="." method="_on_gamemode_selection_continue_button_pressed"]
[connection signal="continue_button_pressed" from="TileModifierScreenCanvasLayer/ScreenController/GamemodeSelection" to="TileModifierScreenCanvasLayer/ScreenController" method="_on_gamemode_selection_continue_button_pressed"]
[connection signal="row_number_changed" from="TileModifierScreenCanvasLayer/ScreenController/GamemodeSelection" to="." method="_on_gamemode_selection_row_number_changed"]
[connection signal="back_button_pressed" from="TileModifierScreenCanvasLayer/ScreenController/TileModifierScreen" to="TileModifierScreenCanvasLayer/ScreenController" method="_on_tile_modifier_screen_back_button_pressed"]
[connection signal="continue_button_pressed" from="TileModifierScreenCanvasLayer/ScreenController/TileModifierScreen" to="." method="_on_tile_modifier_screen_continue_button_pressed"]
[connection signal="continue_button_pressed" from="TileModifierScreenCanvasLayer/ScreenController/TileModifierScreen" to="TileModifierScreenCanvasLayer/ScreenController" method="_on_tile_modifier_screen_continue_button_pressed"]
